GNOME Bugzilla – Bug 621413
Maximize/Unmaximize not behaving properly for some non-gnome based programs
Last modified: 2010-06-15 17:34:07 UTC
Double clicking the window title bar should maximize/unmaximize(restore to original size) the window. This is not working for me for a few specific programs: firefox, xchat, and google chrome. The window will maximize fine, but when you go to restore the window it will flash and then remain the same size as the maximized window. This will also happen if you right click the window title bar and click the maximize/unmaximize command, and also if you use set the 'toggle maximization state' shortcut in the Control Center->Personal->Keyboard Shortcuts menu. The below pictures depict what is happening. Click maximize: http://img810.imageshack.us/i/beforemaximize.png/ Click unmaximize: http://img41.imageshack.us/i/clickingunmaximize.png/ Unmaximize result: http://img21.imageshack.us/i/unmaximizeresult.png/ The same problem DOES NOT occur if I use the maximize/restore window button at the upper-right-hand corner of the window next to the close button.
If forgot to add that I'm running the latest build of gnome-shell as of 06/12/2010 on Ubuntu lucid 10.04.
Reproduced using plain Mutter, no gnome-shell, reassigning.
Created attachment 163629 [details] [review] Fix problem with window unmaximization A mismerge of the Metacity commit "4943d79 Prevent window self-maximisation" caused the window's user set size and position to be saved *before* actually resizing the window to the unmaximized position rather than after. This meant that after unmaximization the window was in an inconsistent state and anything that caused a resize to be queued (like a change in window properties by the application) would cause it to pop back to the maximized size and position.
Comment on attachment 163629 [details] [review] Fix problem with window unmaximization Looks good.
The patch fixes the problem for me. Thanks.
Attachment 163629 [details] pushed as ff5a73d - Fix problem with window unmaximization